# CrewAI_ITec

./: .env  .gitignore  LICENSE  llm.py  main.py  pyproject.toml  readme.md  requirements.txt
Templates/: main.py
Templates/app/tools/: api_wkp.py
api/: controller.py  routes.py
app/: crew.py  main.py
app/agents/: api_search.py  api_write.py
app/tools/: api_wkp.py
crew/: crew.py  main.py
crew/config/: agents.yaml
crew_itec/: crew.py  main.py
crew_itec/config/: tasks.yaml
knowledge/: user_preference.txt
tools/: custom_tool.py
