[project]
name = "crew_itec"
version = "0.1.0"
description = "Leitura de artigos usando CrewAI"
authors = [{ name = "Guilherme Amarilho", email = "guiamarilho1@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crew_itec"]

[project.scripts]
crew_itec = "crew_itec.main:run"
run_crew = "crew_itec.main:run"

[tool.crewai]
type = "crew"
